// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Block sagas createMissingTicketBlocks should create missing ticket blocks 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      [Function],
    ],
    "context": Array [],
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Array [
        "modern-tribe",
      ],
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 4`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Array [
        "modern-tribe",
      ],
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicket should delete ticket 5`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicketsHeaderImage should delete tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas deleteTicketsHeaderImage should not delete tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas resetTicketsBlock should reset tickets block 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "meta",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas resetTicketsBlock should reset tickets block 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "meta": Object {
          "_tribe_ticket_capacity": "",
        },
      },
    ],
    "context": Object {
      "clearSelectedBlock": [Function],
      "editPost": [Function],
      "insertBlocks": [Function],
      "removeBlocks": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "modern-tribe",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setBodyDetails should set body details 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "modern-tribe",
      0,
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set capacity type to shared if tickets plus is active 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set ticket initial state 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas setTicketInitialState should set tickets initial state for new ticket 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "date",
    ],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas updateTicketsHeaderImage should not update tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;

exports[`Ticket Block sagas updateTicketsHeaderImage should update tickets header image 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [],
    "context": Object {
      "getBlockCount": [Function],
      "getBlockIndex": [Function],
      "getBlockRootClientId": [Function],
      "getBlocks": [Function],
      "getCurrentPost": [Function],
      "getCurrentPostAttribute": [Function],
      "getCurrentPostId": [Function],
      "getCurrentPostType": [Function],
      "getEditedPostAttribute": [Function],
    },
    "fn": [Function],
  },
}
`;
